--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -1,13 +1,16 @@
 @import "settings/settings";
 @import "generic/generic";
 
+*, html, body {
+  font-weight: 300;
+}
+
 * {
   box-sizing: border-box;
 }
 
 html, body {
   font-size: 16px;
-  font-weight: 300;
   font-family: "museo_sans", sans-serif;
 }
 
